# bilibili-to-evernote

./: .gitignore  .gitmodules  README.md  config.toml.example  functions.py  main.py  parse.py  pyproject.toml  requirements.txt  test.py  utils.py
template/: normal.xhtml  repost.xhtml
